[tool.poetry]
name = "pyroball"
version = "0.1.0"
description = ""
authors = ["Angus Williams <anguswilliams91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyro-ppl = "^1.1.0"
numpyro = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
